Movie Adding Features added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,11 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  servlet:
+    multipart:
+      max-file-size: 2MB
+      max-request-size: 10MB
 project:
-  poster: poster/
-
+  poster: posters/
+base:
+  url: "http://localhost:8080"
